app/laravel-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpfpm-nginx-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app-php
  template:
    metadata:
      labels:
         app: nginx-app-php
    spec:
      volumes:
      # Create the shared files volume to be used in both pods
      - name: shared-files
        emptyDir: {}
      
      # Add the ConfigMap we declared above as a volume for the pod
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      containers:
        # Our PHP-FPM application
        - image: my-php-app:1.0.0
          name: php-app
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          # Important! After this container has started, the PHP files
          # in our Docker image aren't in the shared volume. We need to 
          # get them into the shared volume. If we tried to write directly
          # to this volume from our Docker image the files wouldn't appear
          # in the nginx container.
          #
          # So, after the container has started, copy the PHP files from this
          # container's local filesystem (/app -- added via the Docker image) 
          # to the shared volume, which is mounted at /var/www/html.
          # command: ["sh","-c","cd /var/www/html && chmod -R 777 /var/www/html"]
          lifecycle:
            postStart:
              exec:
                command: 
                  - "/bin/sh"
                  - "-c"
                  - |
                    cp -r /app/. /var/www/html
                    chmod -R 777 /var/www/html/
                    cd /var/www/html/
                    npm run dev
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
        # Our nginx container, which uses the configuration declared above,
        # along with the files shared with the PHP-FPM app.
        - image: nginx:1.14.2
          name: nginx-app
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
