app/laravel-service.yml
# kubectl port-forward svc/my-nginx-service 8030:80
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  labels:
    app: nginx-app-php-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-app-php
  type: ClusterIP
